2005-05-16 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Abstract/Widget.chs.pp: use new properties
	functions.

	* gtk/Graphics/UI/Gtk/Selectors/FileChooserButton.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FileChooserWidget.chs.pp,
	gtk/Graphics/UI/Gtk/Windows/Window.chs.pp: conditional compilation
	fixes for Gtk+ versions before 2.4.

	* tools/callbackGen/HookGenerator.hs: liberalise the type of boxed
	object marshalers from (Ptr a -> IO a) to (Ptr a' -> IO a) so we can
	give marshExposeRect its natural type of (Ptr Event -> IO Rectangle).

	* gtk/Graphics/UI/Gtk/Gdk/Events.hsc: compilation fix in definition of
	Event's Key data constructor (I assume this is what was intended). A
	couple haddock fixes. Add type signature to marshExposeRect (since it
	is exported and would otherwise get type Ptr a -> IO Rectangle).

	* tools/apiGen/Api.hs: correct spelling error (which actually broke
	the parser).

	* tools/apiGen/CodeGen.hs: rename the documentation section heading
	from "Properties" to "Attributes" since that's what we seem to be
	calling them these days. Generate attribute definitions using the new
	attributes API and the new GObject properties convenience functions.

	* tools/apiGen/Marshal.hs: supporting change to the above attributes /
	properties change: return the Haskell type of properties rather than
	the GenericValue constructor. Also add marshaling for a couple extra
	types.

	* tools/apiGen/FormatDocs.hs: add 'data' to the illegal identifier /
	keywords list.

	* tools/apiGen/MarshalFixup.hs: add various extra functions to the
	fixup tables. Add 5 extra functions to the win32 "_utf8" file name
	functions list.

	* gtk/Graphics/UI/Gtk/Buttons/Button.chs.pp
	gtk/Graphics/UI/Gtk/Entry/Entry.chs.pp
	gtk/Graphics/UI/Gtk/MenuComboToolbar/CheckMenuItem.chs.pp
	gtk/Graphics/UI/Gtk/MenuComboToolbar/Toolbar.chs.pp,
	gtk/Graphics/UI/Gtk/Windows/WindowGroup.chs: conditional compilation
	fixes for Gtk+ versions before 2.4.
